Access sun.misc.Unsafe reflectively in ReflectionUtils
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>